# calc

./: .gitignore  Makefile  Makefile.am.in  README.md  acinclude.m4  autogen.sh  calc.c  calc.h  cleanauto.sh  configure.ac  exp.txt  exp10.txt  exp2.txt  exp3.txt  exp4-inc.txt  exp4.txt  exp5.txt  exp6-runfiles.txt  exp6.txt  exp7.txt  exp8-runfile.txt  exp8.txt  exp9.txt  ext.h  ext.sh  main.c  parser.y  scanner.l  smart_string.h  zend_hash.c  zend_hash.h
ext/: .gitignore
ext/demo/: Makefile.m4  demo.c  demo.h
tools/: .gitignore  Makefile
